--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.dbcp2.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pizzaria?createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.username=pizzaria
 spring.datasource.password=101729
 
 spring.jpa.show-sql=true
